--- a/styles2.css
+++ b/styles2.css
@@ -22,6 +22,7 @@ nav{
     justify-content: flex-end; 
     gap: 5px;  
     width: 100%;
+    margin-top: 15px;
 }
 .nav-link{
     text-decoration: none;
